plugins {
    id 'com.android.application'
    id 'ru.cleverpumpkin.proguard-dictionaries-generator'
}

android {
    namespace 'com.github.catvod'

    compileSdk 35

    defaultConfig {
        applicationId "com.github.catvod.demo"
        minSdk 16
        targetSdk 35
    }

    buildTypes {
        release {
            minifyEnabled true
            proguardFiles 'proguard-rules.pro'
            proguardDictionaries {
                dictionaryNames = ["build/class-dictionary", "build/package-dictionary", "build/obfuscation-dictionary"]
                minLineLength 1
                maxLineLength 3
                linesCountInDictionary 100000
            }
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    testOptions {
        unitTests.returnDefaultValues = true
    }
    configurations.configureEach {
        resolutionStrategy {
            force 'com.squareup.okhttp3:okhttp:3.12.13'
        }
    }
}

dependencies {
    implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
    implementation 'com.github.thegrizzlylabs:sardine-android:0.9'
    implementation 'wang.harlon.quickjs:wrapper-android:0.21.1'
    implementation 'com.squareup.okhttp3:okhttp:3.12.13'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'cn.wanghaomiao:JsoupXpath:2.5.1'
    implementation 'com.google.zxing:core:3.3.0'
    implementation 'com.orhanobut:logger:2.2.0'
    implementation 'org.jsoup:jsoup:1.15.3'

    // Required -- JUnit 4 framework
    testImplementation 'junit:junit:4.12'
    // Optional -- Mockito framework（可选，用于模拟一些依赖对象，以达到隔离依赖的效果）
    testImplementation 'org.mockito:mockito-core:5.12.0'
}